layout bugfix

--- a/css/styles.css
+++ b/css/styles.css
@@ -570,6 +570,9 @@ label {
 
 /* CHECKOUT SUCCESS PAGE */
 
+.testbox {
+}
+
 .checkout-text h1 {
     position: relative;
     margin-top: 80px;
@@ -585,6 +588,7 @@ label {
 
 .purchased-container {
     position: relative;
+    margin: auto;
     max-width: 800px;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
@@ -606,12 +610,12 @@ label {
 }
 
 .img-container { 
-    display: block; 
+ 
 }
 .product-container .fa-circle-play { 
     position: absolute; 
-    bottom: 150px; 
-    left: 40px; 
+    bottom: 140px; 
+    left: 90px; 
 }
 
 .fa-circle-play:hover {
@@ -619,7 +623,6 @@ label {
 }
 
 .product-container p {
-    text-align: center;
 }
 
 
